objects/nFORCE__Session__c.object
<CustomObject>
    <description>This object is used to store temporary data to allow the user to enter an in-progress workflow.</description>
    <fields>
        <fullName>LLC_BI__Category__c</fullName>
        <description>This field is used to indicate the context of an existing session. It is automatically set during the New Customer Onboarding, Deposit Origination, Deposit Maintenance workflows, Online Applications, Consumer Loans and Online Deposit Origination workflows.</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deposit Origination</fullName>
                </value>
                <value>
                    <fullName>Commercial Loan</fullName>
                </value>
                <value>
                    <fullName>Consumer Loan</fullName>
                </value>
                <value>
                    <fullName>Online Deposit Application</fullName>
                </value>
                <value>
                    <fullName>Online Consumer Loan Application</fullName>
                </value>
                <value>
                    <fullName>Online Commercial Loan Application</fullName>
                </value>
                <value>
                    <fullName>Deposit Maintenance</fullName>
                </value>
                <value>
                    <fullName>Credit-Action-Operation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__App_Resolved__c</fullName>
        <description>This field is not required. It populates automatically. This field represents the Route and Group App name that the route group resolves to.</description>
        <formula>nFORCE__Route_Group__r.nFORCE__Group__r.nFORCE__App__c + &apos;.&apos; +  nFORCE__Route_Group__r.nFORCE__Route__r.nFORCE__App__c</formula>
        <label>App Resolved</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Context_Id__c</fullName>
        <description>This field is not required. It populates automatically. This field represents the ID of the object in context for a session.</description>
        <label>Context ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Context_Page__c</fullName>
        <description>This field is not required. It populates automatically. This field represents the base page in context for a session.</description>
        <label>Context Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Data__c</fullName>
        <description>This field is not required. It populates automatically. This is the string field used for data persistence.</description>
        <label>Session Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Route_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not required. It populates automatically. This field shows the route group associated to the session.</description>
        <label>Route Group</label>
        <referenceTo>nFORCE__Route_Group__c</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Session_URL__c</fullName>
        <description>This field is not required. It populates automatically. This field stores the link to allow a user to return to an existing session.</description>
        <formula>HYPERLINK(&quot;/apex/&quot; &amp;  nFORCE__Context_Page__c &amp; &quot;?sid=&quot; &amp; Id, &quot;Click here to open Session&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Type__c</fullName>
        <description>--DEPRECATED-- Replaced by LLC_BI__Category__c - Product type session relates to</description>
        <label>-D Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Session</label>
    <listViews>
        <fullName>nFORCE__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>